--- a/package.json
+++ b/package.json
@@ -16,18 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/autoload": "^5.8.0",
     "@fastify/mongodb": "^8.0.0",
-    "@fastify/sensible": "^5.5.0",
+    "fastify": "^4.26.0",
+    "fastify-plugin": "^4.5.1",
+    "papr": "^15.1.0",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/auto-instrumentations-node": "^0.41.1",
     "@opentelemetry/instrumentation": "^0.48.0",
     "@opentelemetry/sdk-metrics": "^1.21.0",
     "@opentelemetry/sdk-node": "^0.48.0",
-    "@opentelemetry/sdk-trace-node": "^1.21.0",
-    "fastify": "^4.26.0",
-    "fastify-plugin": "^4.5.1",
-    "papr": "^15.1.0"
+    "@opentelemetry/sdk-trace-node": "^1.21.0"
   },
   "pnpm": {
     "overrides": {
